--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ https://templatemo.com/tm-569-edu-meeting
               </div>
               <div class="down-content">
                 <h4>Best Course Content</h4>
-                <p>Course content curated for best learning experience.</p>
+                <p>Content curated for best learning.</p>
               </div>
             </div>
             
@@ -138,7 +138,7 @@ https://templatemo.com/tm-569-edu-meeting
               </div>
               <div class="down-content">
                 <h4>Amazing Teachers</h4>
-                <p>Highly experienced and passionate teachers.</p>
+                <p>Experienced and passionate teachers.</p>
               </div>
             </div>
             
@@ -391,7 +391,7 @@ https://templatemo.com/tm-569-edu-meeting
                       </ul>
                     </div>
                     <div class="col-4">
-                       <span>$160</span>
+                       <span>$79</span>
                     </div>
                   </div>
                 </div>
@@ -400,7 +400,7 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="item">
               <img src="assets/images/course-02.jpg" alt="Course Two">
               <div class="down-content">
-                <h4>C++</h4>
+                <h4>Modern C++</h4>
                 <div class="info">
                   <div class="row">
                     <div class="col-8">
@@ -411,7 +411,7 @@ https://templatemo.com/tm-569-edu-meeting
                       </ul>
                     </div>
                     <div class="col-4">
-                       <span>$180</span>
+                       <span>$79</span>
                     </div>
                   </div>
                 </div>
@@ -432,7 +432,7 @@ https://templatemo.com/tm-569-edu-meeting
                       </ul>
                     </div>
                     <div class="col-4">
-                       <span>$140</span>
+                       <span>$59</span>
                     </div>
                   </div>
                 </div>
@@ -441,7 +441,7 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="item">
               <img src="assets/images/course-04.jpg" alt="">
               <div class="down-content">
-                <h4>Scratch</h4>
+                <h4>Scratch 3</h4>
                 <div class="info">
                   <div class="row">
                     <div class="col-8">
@@ -454,7 +454,7 @@ https://templatemo.com/tm-569-edu-meeting
                       </ul>
                     </div>
                     <div class="col-4">
-                       <span>$120</span>
+                       <span>$49</span>
                     </div>
                   </div>
                 </div>
@@ -476,7 +476,7 @@ https://templatemo.com/tm-569-edu-meeting
                       </ul>
                     </div>
                     <div class="col-4">
-                       <span>$250</span>
+                       <span>$49</span>
                     </div>
                   </div>
                 </div>
@@ -498,7 +498,7 @@ https://templatemo.com/tm-569-edu-meeting
                       </ul>
                     </div>
                     <div class="col-4">
-                       <span>$270</span>
+                       <span>$49</span>
                     </div>
                   </div>
                 </div>
@@ -507,7 +507,7 @@ https://templatemo.com/tm-569-edu-meeting
             <div class="item">
               <img src="assets/images/course-03.jpg" alt="">
               <div class="down-content">
-                <h4>Web Design Templates at your finger tips</h4>
+                <h4>Abacus</h4>
                 <div class="info">
                   <div class="row">
                     <div class="col-8">
@@ -520,117 +520,7 @@ https://templatemo.com/tm-569-edu-meeting
                       </ul>
                     </div>
                     <div class="col-4">
-                       <span>$340</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <img src="assets/images/course-04.jpg" alt="">
-              <div class="down-content">
-                <h4>Please visit our website again</h4>
-                <div class="info">
-                  <div class="row">
-                    <div class="col-8">
-                      <ul>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                      </ul>
-                    </div>
-                    <div class="col-4">
-                       <span>$360</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <img src="assets/images/course-01.jpg" alt="">
-              <div class="down-content">
-                <h4>Responsive HTML Templates for you</h4>
-                <div class="info">
-                  <div class="row">
-                    <div class="col-8">
-                      <ul>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                      </ul>
-                    </div>
-                    <div class="col-4">
-                       <span>$400</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <img src="assets/images/course-02.jpg" alt="">
-              <div class="down-content">
-                <h4>Download Free CSS Layouts for your business</h4>
-                <div class="info">
-                  <div class="row">
-                    <div class="col-8">
-                      <ul>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                      </ul>
-                    </div>
-                    <div class="col-4">
-                       <span>$430</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <img src="assets/images/course-03.jpg" alt="">
-              <div class="down-content">
-                <h4>Morbi in libero blandit lectus cursus</h4>
-                <div class="info">
-                  <div class="row">
-                    <div class="col-8">
-                      <ul>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                      </ul>
-                    </div>
-                    <div class="col-4">
-                       <span>$480</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <img src="assets/images/course-04.jpg" alt="">
-              <div class="down-content">
-                <h4>Curabitur molestie dignissim purus</h4>
-                <div class="info">
-                  <div class="row">
-                    <div class="col-8">
-                      <ul>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                        <li><i class="fa fa-star"></i></li>
-                      </ul>
-                    </div>
-                    <div class="col-4">
-                       <span>$560</span>
+                       <span>$49</span>
                     </div>
                   </div>
                 </div>
@@ -648,20 +538,20 @@ https://templatemo.com/tm-569-edu-meeting
         <div class="col-lg-6">
           <div class="row">
             <div class="col-lg-12">
-              <h2>A Few Facts About Our University</h2>
+              <h2>Some Numbers for Base2ace Academy</h2>
             </div>
             <div class="col-lg-6">
               <div class="row">
                 <div class="col-12">
                   <div class="count-area-content percentage">
-                    <div class="count-digit">94</div>
-                    <div class="count-title">Succesed Students</div>
+                    <div class="count-digit">100</div>
+                    <div class="count-title">Satisfied Students</div>
                   </div>
                 </div>
                 <div class="col-12">
                   <div class="count-area-content">
-                    <div class="count-digit">126</div>
-                    <div class="count-title">Current Teachers</div>
+                    <div class="count-digit">10</div>
+                    <div class="count-title">Courses</div>
                   </div>
                 </div>
               </div>
@@ -670,14 +560,14 @@ https://templatemo.com/tm-569-edu-meeting
               <div class="row">
                 <div class="col-12">
                   <div class="count-area-content new-students">
-                    <div class="count-digit">2345</div>
-                    <div class="count-title">New Students</div>
+                    <div class="count-digit">500</div>
+                    <div class="count-title">Plus Students</div>
                   </div>
                 </div> 
                 <div class="col-12">
                   <div class="count-area-content">
-                    <div class="count-digit">32</div>
-                    <div class="count-title">Awards</div>
+                    <div class="count-digit">4</div>
+                    <div class="count-title">Countries</div>
                   </div>
                 </div>
               </div>
@@ -739,19 +629,21 @@ https://templatemo.com/tm-569-edu-meeting
             <ul>
               <li>
                 <h6>Phone Number</h6>
-                <span>010-020-0340</span>
+                <span>+91-9271899502</span>
               </li>
               <li>
                 <h6>Email Address</h6>
-                <span>info@meeting.edu</span>
+                <span>enquiry@base2ace.com</span>
               </li>
               <li>
-                <h6>Street Address</h6>
-                <span>Rio de Janeiro - RJ, 22795-008, Brazil</span>
+                <h6>Whatsapp</h6>
+				<span><a href="https://wa.me/919271899502">Click to Chat</a></span>
+                <span></span>
               </li>
               <li>
                 <h6>Website URL</h6>
-                <span>www.meeting.edu</span>
+                <span><a href="www.base2ace.com">www.base2ace.com</a></span>
+				<span><a href="www.test.base2ace.com">www.test.base2ace.com</a></span>
               </li>
             </ul>
           </div>
